--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 
 
 
-<div class="section-container" style = "background-color: darkcyan;">
+<div class="section-container" style = "background-color: white;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12 col-md-12 section-container-spacer">
@@ -168,45 +168,15 @@
     </div>
 </div>
 
-<div class="">
+<div class="" style = "background-color: darkcyan; ">
     <div class='container-fluid'>
-        <div class="row map-container">
-            <div id="map"></div>
-            <div class="col-xs-10 col-md-4 contact-block-container reveal">
-                <div class="row">
-                    <div class="col-xs-12 col-sm-6">
-                        <h3>Phone</h3>
-                        <p>+ 123 45 67 890</p>
-
-                        <h3>E-mail</h3>
-                        <p>hello@email.com</p>
-
-                    </div>
-
-                    <div class="col-xs-12 col-sm-6">
-                        <h3>Address</h3>
-                        <p>42 rue rouelle 75015, Paris</p>
-
-                        <h3>Open hours</h3>
-                        <p>Mon - Fri : 9AM - 5PM</p>
-                    </div>
-                </div>
-            </div>
+         <div class = "container" style = "margin-top:50px; margin-bottom:50px;">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3603.234692088406!2d81.76848495023307!3d25.430416083708675!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x399acac768944451%3A0x1f0c03a031f74c3f!2sIndian+Institute+of+Information+Technology+Allahabad!5e0!3m2!1sen!2sin!4v1516369030382" align = "middle" width="100%" height="400" frameborder="0" style="border:0" allowfullscreen></iframe>
         </div>
     </div>
 </div>
 
-
-<script>
-document.addEventListener("DOMContentLoaded", function (event) {
-    
-  googleMapInit(); 
-  scrollToAnchor();
-  scrollRevelation('reveal');
-});
-</script>
-
-<footer class="footer-container white-text-container">
+<footer class="footer-container white-text-container" style = "margin-top:0;">
     <div class="container">
         <div class="row">
                 <div class="col-md-4">
