--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       </div>
 
       <div class="navbar-collapse">
-        <a href="http://topbot.in" class="navbar-brand"><img src="assets/images/topbot.png" style="margin-top:-5px;" width="18%" height="auto" ></a>
+        <a href="http://topbot.in" class="navbar-brand"><img src="assets/images/topbot.png" style="margin-top:-5px;" width="25%" height="300%" ></a>
         <button type="button" class="close" aria-label="Close"><span aria-hidden="true">&times;</span></button>
         <ul class="nav navbar-nav navbar-right">
             <li>
@@ -64,9 +64,9 @@
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
-                <h1 style = "color:darkcyan;">TECHINEST WORKSHOP</h1>
-		    <h2><p class="" style = "color:darkcyan;">IN ASSOCIATION WITH TOPBOT 3.0</p></h2>
-                <a href="#contact-section-container" class="btn btn-primary btn-lg anchor-link" title=""><h3>REGISTER</h3></a>
+                <h1 style = "color:black;">TECHINEST WORKSHOP</h1>
+		    <h2><p class="" style = "color:black;">IN ASSOCIATION WITH TOPBOT 3.0</p></h2>
+                <a href="#contact-section-container" class="btn btn-primary btn-lg anchor-link" title=""><h3 style = "color: black">REGISTER</h3></a>
             </div>
         </div>
     </div>
@@ -84,7 +84,7 @@
                 <div class="fa-container">
                     <i class="fa fa-comment-o fa-3x" aria-hidden="true"></i>
                 </div>
-                <h3 class="text-center">Consectetur</h3>
+                <h3 class="text-center">CONTENT</h3>
                 <p>Duis aute irure dolor in reprehenderit in voluptate velit esse
             cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
             proident.</p>
@@ -94,7 +94,7 @@
                 <div class="fa-container">
                     <i class="fa fa-heart-o fa-3x" aria-hidden="true"></i>
                 </div>
-                <h3 class="text-center">Malesuada</h3>
+                <h3 class="text-center">KIT</h3>
                 <p>Ut enim ad minim veniam,
             quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
             consequat.</p>
@@ -103,7 +103,7 @@
                 <div class="fa-container">
                     <i class="fa fa-bell-o fa-3x" aria-hidden="true"></i>
                 </div>
-                <h3 class="text-center">Phasellus</h3>
+                <h3 class="text-center">PRICE</h3>
                 <p> Ut enim ad minim veniam,
             quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
             consequat.</p>
@@ -117,17 +117,8 @@
     <div class="container">
         <div class="row">
             <div class="col-md-6 col-md-offset-6 text-column">
-                <h2>Dui augue orci</h2>
-                <h3>Lorem ipsum</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc sit amet consectetur dolor. Phasellus ut
-                    lacus tellus. In pretium lobortis blandit. Nam eu laoreet velit. Vivamus laoreet, sem nec scelerisque
-                    elementum, dui augue aliquet urna, ut bibendum purus erat ut massa. Mauris diam orci, feugiat a turpis
-                    et, congue accumsan risus. Nulla malesuada leo sodales, auctor augue quis, condimentum lacus. Phasellus
-                    sed sollicitudin quam, a bibendum urna.</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc sit amet consectetur dolor. Phasellus «
-                    ut lacus » tellus. In pretium lobortis blandit.</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc sit amet consectetur dolor. Phasellus ut
-                    lacus tellus. In pretium lobortis blandit.</p>
+                <h2>ABOUT TECHIENEST</h2>
+                <p>TechieNest is a certified ISO 9001:2008, technology service provider and training organization. The soul mission of founders is to facilitate the education, research and development program; all under one roof. In a very short span of time our team has successfully delivered the impactful service to more than 200 colleges, including the most prestigious institutions of India, such as IIT Mumbai, IIT Delhi and all the NITs. All over the India, with our 6 centers, we are renowned for our own manufacturing unit and unique content. TechieNest is moving ahead with an ideology where practical and theory are equally emphasized. In the vast growing ‘Technical Era’ we are rising with a mission to expand the set boundaries of the ‘techie-brains’ to Explore, Invent and Innovate!</p>
 
             </div>
         </div>
@@ -140,28 +131,25 @@
     <div class="container">
         <div class="row">
             <div class="col-xs-12 col-md-12 section-container-spacer">
-                <h2 class="text-center">Consectetur adipiscing</h2>
+                <h2 class="text-center">WORKSHOP</h2>
             </div>
         </div>
         <div class="row">
             <div class="col-xs-12 col-md-4">
-                <img src="./assets/images/img-02.jpg" alt="" class="img-responsive">
-                <h3 class="text-center">Consectetur</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc sit amet consectetur dolor. Phasellus ut
-                    lacus tellus. In pretium lobortis blandit.</p>
+                <img src="./assets/images/test2.jpg" alt="" class="img-responsive">
+                <h3 class="text-center">BUILD</h3>
+                <p>Techienest provides kits for the purpose of the workshop so that you can make your bot and controller. </p>
             </div>
 
             <div class="col-xs-12 col-md-4">
-                <img src="./assets/images/img-03.jpg" alt="" class="img-responsive">
-                <h3 class="text-center">Malesuada</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc sit amet consectetur dolor. Phasellus ut
-                    lacus tellus. In pretium lobortis blandit.</p>
+                <img src="./assets/images/test1.jpg" alt="" class="img-responsive">
+                <h3 class="text-center">CODE</h3>
+                <p>They will tech you how to code the bot that you have made using arduino programming. </p>
             </div>
             <div class="col-xs-12 col-md-4">
-                <img src="./assets/images/img-04.jpg" alt="" class="img-responsive">
-                <h3 class="text-center">Phasellus</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc sit amet consectetur dolor. Phasellus ut
-                    lacus tellus. In pretium lobortis blandit.</p>
+                <img src="./assets/images/test4.jpg" alt="" class="img-responsive">
+                <h3 class="text-center">RUN</h3>
+                <p>Finally they will teach you to load the code in the bot. </p>
             </div>
         </div>
     </div>
@@ -175,7 +163,7 @@
     </div>
 </div>
 
-<footer class="footer-container white-text-container" style = "margin-top:0;">
+<footer class="footer-container white-text-container" style = "margin-top:0;background-color: black;">
     <div class="container">
         <div class="row" >
                 <div class="col-md-4">
