added info about workshop

--- a/index.html
+++ b/index.html
@@ -77,36 +77,96 @@
         <div class="row">
             <div class="col-xs-12 col-md-12 section-container-spacer">
                 <h2 class="text-center">ABOUT WORKSHOP</h2>
+				<h3 class = "text-center">OBSTACLE AVOIDER WIRELESS ROBOT</h3>
             </div>
         </div>
         <div class="row">
-            <div class="col-xs-12 col-md-4">
-                <div class="fa-container">
-                    <i class="fa fa-comment-o fa-3x" aria-hidden="true"></i>
-                </div>
-                <h3 class="text-center">CONTENT</h3>
-                <p>Duis aute irure dolor in reprehenderit in voluptate velit esse
-            cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-            proident.</p>
+            <div class="col-xs-12 col-md-6">
+                <h3 class="text-center">DAY 1 (session 1 & 2) / 6 - 8 hrs </h3> <br><br>
+                <ul>
+					<li>
+						<h4>INTRODUCTORY AND THEORETICAL SESSION</h4>
+						<p>
+							 Introduction to Robotics. <br>
+							 Robots and Law of Robots.<br>
+							 Need of Microcontrollers in Autonomous Robots.<br>
+							 Different parts of Robot. <br>
+							 Wide description about Microcontrollers. <br>
+							 Wide description about Arduino. <br>
+							 Memory organization in microcontrollers. <br>
+							 Input & Output peripherals in Microcontrollers. <br>
+							 Registers in Microcontrollers. <br>
+							 Programming of Microcontrollers. <br>
+						</p>
+					</li>
+					<li>
+						<h4>KITS DISTRIBUTION</h4>
+						<p>
+							 Interfacing of peripherals. <br>
+							 Output devices interfacing. <br>
+							 Programming for LED interfacing with Microcontrollers. <br>
+							 Different patterns of LED blinking. <br>
+						</p>
+					</li>
+					<li>
+						<h4>MOTOR INTERFACING</h4>
+						<p>
+							 Actuators to be used in Robots. <br>
+							 Wide description about L293D. <br>
+							 Interfacing motor driver IC with Microcontroller. <br>
+							 Interfacing of Motors with microcontrollers via L293D. <br>
+							 Differential drive mechanism of Robot. <br>
+						</p>
+					</li>
+					<li>
+						<h4>DEVELOPMENT OF AN AUTONOMOUS ROBOT</h4>
+					</li>
+					<li>
+						<h4>INTRODUCTION TO IR SENSORS</h4>
+						<p>
+							 Interfacing of IR sensor through microcontroller. <br>
+							 Introduction and working of LM358 comparator IC. <br>
+						</p>
+					</li>
+					<li>
+						<h4>PROJECT 1: DEVELOPMENT OF OBSTACLE AVOIDER ROBOT</h4>
+					</li>
+					<li>
+						<h4>QUERY SESSION </h4>
+					</li>
+				</ul>
             </div>
 
-            <div class="col-xs-12 col-md-4">
-                <div class="fa-container">
-                    <i class="fa fa-heart-o fa-3x" aria-hidden="true"></i>
-                </div>
-                <h3 class="text-center">KIT</h3>
-                <p>Ut enim ad minim veniam,
-            quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-            consequat.</p>
-            </div>
-            <div class="col-xs-12 col-md-4">
-                <div class="fa-container">
-                    <i class="fa fa-bell-o fa-3x" aria-hidden="true"></i>
-                </div>
-                <h3 class="text-center">PRICE</h3>
-                <p> Ut enim ad minim veniam,
-            quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-            consequat.</p>
+            <div class="col-xs-12 col-md-6">
+                <h3 class="text-center">DAY 2 (session 1 & 2) / 6 - 8 hrs </h3> <br><br>
+                <ul>
+					<li>
+						<h4>PROJECT 2: DEVELOPMENT OF OBSTACLE FOLLOWER ROBOT</h4> <br><br>
+					</li>
+					<li>
+						<h4>PROJECT 3: DEVELOPMENT OF LINE FOLLOWER ROBOT</h4> <br><br>
+					</li>
+					<li>
+						<h4>SERIAL COMMUNICATION AND BLUETOOTH TECHNOLOGY</h4>
+						<p>
+							 Accessing internal USART of microcontrollers. <br>
+							 Interfacing Bluetooth module with microcontrollers. <br>
+							 Transmitting & receiving data wirelessly through Bluetooth of Laptop/Android mobile phone.<br>
+						</p> <br><br>
+					</li>
+					<li> 
+						<h4>PROJECT 4: BLUETOOTH CONTROLLED ROBOT VIA LAPTOP</h4><br><br>
+					</li>
+					<li>
+						<h4>PROJECT 5: ANDROID MOBILE CONTROL WIRELESS ROBOT</h4><br><br>
+					</li>
+					<li>
+						<h4>PROJECT 6: GESTURE CONTROL ROBOT VIA BLUETOOTH</h4><br><br>
+					</li>
+					<li>
+						<h4>QUERY SESSION / COMPETITION</h4><br><br>
+					</li>
+				</ul>
             </div>
         </div>
     </div>
@@ -131,25 +191,41 @@
     <div class="container">
         <div class="row">
             <div class="col-xs-12 col-md-12 section-container-spacer">
-                <h2 class="text-center">WORKSHOP</h2>
+                <h2 class="text-center">ABOUT KITS</h2>
             </div>
         </div>
         <div class="row">
             <div class="col-xs-12 col-md-4">
                 <img src="./assets/images/test2.jpg" alt="" class="img-responsive">
-                <h3 class="text-center">BUILD</h3>
-                <p>Techienest provides kits for the purpose of the workshop so that you can make your bot and controller. </p>
+                <br><br><br>
+				<ul>
+					<li>Arduino Board</li>
+					<li>D type Programming Cable</li>
+					<li>On board voltage regulated Power supply unit</li>
+					<li>IR sensor pair</li>
+				</ul>
             </div>
 
             <div class="col-xs-12 col-md-4">
                 <img src="./assets/images/test1.jpg" alt="" class="img-responsive">
-                <h3 class="text-center">CODE</h3>
-                <p>They will tech you how to code the bot that you have made using arduino programming. </p>
+                <br><br><br>
+				<ul>
+					<li>Bluetooth Module</li>
+					<li>Universal Robotics Platform</li>
+					<li>DC motor pairs</li>
+					<li>Wheels</li>
+					<li>Screws</li>
+				</ul>
             </div>
             <div class="col-xs-12 col-md-4">
                 <img src="./assets/images/test4.jpg" alt="" class="img-responsive">
-                <h3 class="text-center">RUN</h3>
-                <p>Finally they will teach you to load the code in the bot. </p>
+                <br><br><br>
+				<ul>
+					<li>Screw Driver</li>
+					<li>Supporting Cable</li>
+					<li>Adaptor</li>
+					<li>Motor Driver Circuit</li>
+				</ul>
             </div>
         </div>
     </div>
