removed eye sore bullets

--- a/index.html
+++ b/index.html
@@ -87,35 +87,35 @@
 					<li>
 						<h4>INTRODUCTORY AND THEORETICAL SESSION</h4>
 						<p>
-							 Introduction to Robotics. <br>
-							 Robots and Law of Robots.<br>
-							 Need of Microcontrollers in Autonomous Robots.<br>
-							 Different parts of Robot. <br>
-							 Wide description about Microcontrollers. <br>
-							 Wide description about Arduino. <br>
-							 Memory organization in microcontrollers. <br>
-							 Input & Output peripherals in Microcontrollers. <br>
-							 Registers in Microcontrollers. <br>
-							 Programming of Microcontrollers. <br>
+							Introduction to Robotics. <br>
+							Robots and Law of Robots.<br>
+							Need of Microcontrollers in Autonomous Robots.<br>
+							Different parts of Robot. <br>
+							Wide description about Microcontrollers. <br>
+							Wide description about Arduino. <br>
+							Memory organization in microcontrollers. <br>
+							Input & Output peripherals in Microcontrollers. <br>
+							Registers in Microcontrollers. <br>
+							Programming of Microcontrollers. <br>
 						</p>
 					</li>
 					<li>
 						<h4>KITS DISTRIBUTION</h4>
 						<p>
-							 Interfacing of peripherals. <br>
-							 Output devices interfacing. <br>
-							 Programming for LED interfacing with Microcontrollers. <br>
-							 Different patterns of LED blinking. <br>
+							Interfacing of peripherals. <br>
+							Output devices interfacing. <br>
+							Programming for LED interfacing with Microcontrollers. <br>
+							Different patterns of LED blinking. <br>
 						</p>
 					</li>
 					<li>
 						<h4>MOTOR INTERFACING</h4>
 						<p>
-							 Actuators to be used in Robots. <br>
-							 Wide description about L293D. <br>
-							 Interfacing motor driver IC with Microcontroller. <br>
-							 Interfacing of Motors with microcontrollers via L293D. <br>
-							 Differential drive mechanism of Robot. <br>
+							Actuators to be used in Robots. <br>
+							Wide description about L293D. <br>
+							Interfacing motor driver IC with Microcontroller. <br>
+							Interfacing of Motors with microcontrollers via L293D. <br>
+							Differential drive mechanism of Robot. <br>
 						</p>
 					</li>
 					<li>
@@ -124,8 +124,8 @@
 					<li>
 						<h4>INTRODUCTION TO IR SENSORS</h4>
 						<p>
-							 Interfacing of IR sensor through microcontroller. <br>
-							 Introduction and working of LM358 comparator IC. <br>
+							Interfacing of IR sensor through microcontroller. <br>
+							Introduction and working of LM358 comparator IC. <br>
 						</p>
 					</li>
 					<li>
@@ -149,9 +149,9 @@
 					<li>
 						<h4>SERIAL COMMUNICATION AND BLUETOOTH TECHNOLOGY</h4>
 						<p>
-							 Accessing internal USART of microcontrollers. <br>
-							 Interfacing Bluetooth module with microcontrollers. <br>
-							 Transmitting & receiving data wirelessly through Bluetooth of Laptop/Android mobile phone.<br>
+							Accessing internal USART of microcontrollers. <br>
+							Interfacing Bluetooth module with microcontrollers. <br>
+							Transmitting & receiving data wirelessly through Bluetooth of Laptop/Android mobile phone.<br>
 						</p> <br><br>
 					</li>
 					<li> 
