--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             <div class="col-xs-12">
                 <h1 style = "color:black;">TECHINEST WORKSHOP</h1>
 		    <h2><p class="" style = "color:black;">IN ASSOCIATION WITH TOPBOT 3.0</p></h2>
-                <a href="#contact-section-container" class="btn btn-primary btn-lg anchor-link" title=""><h3 style = "color: black">REGISTER</h3></a>
+                <a href="https://goo.gl/forms/Hm9ktWFueWpEVLRA2" class="btn btn-primary btn-lg anchor-link" title=""><h3 style = "color: black">REGISTER</h3></a>
             </div>
         </div>
     </div>
@@ -230,6 +230,7 @@
         </div>
     </div>
 </div>
+
 
 <div class="" style = "background-color: darkcyan; ">
     <div class='container-fluid'>
