--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             <div class="col-xs-12">
                 <h1 style = "color:black;">TECHINEST WORKSHOP</h1>
 		    <h2><p class="" style = "color:black;">IN ASSOCIATION WITH TOPBOT 3.0</p></h2>
-                <a href="https://l.facebook.com/l.php?u=https%3A%2F%2Fdocs.google.com%2Fforms%2Fd%2Fe%2F1FAIpQLSdcanIRzCY3zy7jVLEhl2GJ4KFcGTPe_aoA9fW1oYefLDTaPw%2Fviewform&h=ATNkLqR3s-GicSvqzJrs9-exfM2gYcdrvaBRXZNyxMuq5Q7m5KgIVLpihaPaSkfqCK11fzF8hvaKEt7s2cABxb0Ea5VMph_9IoGZvlhJkp44yw" class="btn btn-primary btn-lg anchor-link" title=""><h3 style = "color: black">REGISTER</h3></a>
+                <a href="https://docs.google.com/forms/d/e/1FAIpQLSdcanIRzCY3zy7jVLEhl2GJ4KFcGTPe_aoA9fW1oYefLDTaPw/viewform" class="btn btn-primary btn-lg anchor-link" title=""><h3 style = "color: black">REGISTER</h3></a>
             </div>
         </div>
     </div>
