--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
-                <h1 style = "color:black;">TECHINEST WORKSHOP</h1>
+                <h1 style = "color:black;">TECHIENEST WORKSHOP</h1>
 		    <h2><p class="" style = "color:black;">IN ASSOCIATION WITH TOPBOT 3.0</p></h2>
                 <a href="https://docs.google.com/forms/d/e/1FAIpQLSdcanIRzCY3zy7jVLEhl2GJ4KFcGTPe_aoA9fW1oYefLDTaPw/viewform" class="btn btn-primary btn-lg anchor-link" title=""><h3 style = "color: black">REGISTER</h3></a>
             </div>
