--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             <div class="col-xs-12">
                 <h1 style = "color:black;">TECHIENEST WORKSHOP</h1>
 		    <h2><p class="" style = "color:black;">IN ASSOCIATION WITH TOPBOT 3.0</p></h2>
-                <a href="https://docs.google.com/forms/d/e/1FAIpQLSdcanIRzCY3zy7jVLEhl2GJ4KFcGTPe_aoA9fW1oYefLDTaPw/viewform" class="btn btn-primary btn-lg anchor-link" title=""><h3 style = "color: black">REGISTER</h3></a>
+                <!--<a href="https://docs.google.com/forms/d/e/1FAIpQLSdcanIRzCY3zy7jVLEhl2GJ4KFcGTPe_aoA9fW1oYefLDTaPw/viewform" class="btn btn-primary btn-lg anchor-link" title=""><h3 style = "color: black">REGISTER</h3></a>-->
             </div>
         </div>
     </div>
@@ -82,7 +82,7 @@
         </div>
         <div class="row">
             <div class="col-xs-12 col-md-6">
-                <h3 class="text-center">DAY 1 (session 1 & 2) / 6 - 8 hrs </h3> <br><br>
+                <h3 class="text-center">DAY 1 (10th March 2018) / 6 - 8 hrs </h3> <br><br>
                 <ul>
 					<li>
 						<h4>INTRODUCTORY AND THEORETICAL SESSION</h4>
@@ -138,7 +138,7 @@
             </div>
 
             <div class="col-xs-12 col-md-6">
-                <h3 class="text-center">DAY 2 (session 1 & 2) / 6 - 8 hrs </h3> <br><br>
+                <h3 class="text-center">DAY 2 (11th March 2018) / 6 - 8 hrs </h3> <br><br>
                 <ul>
 					<li>
 						<h4>PROJECT 2: DEVELOPMENT OF OBSTACLE FOLLOWER ROBOT</h4> <br><br>
